--- a/story.html
+++ b/story.html
@@ -30,7 +30,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	    <li><a href="https://dsb-meeting.github.io/DSB2020/">DSB
                 2020</a> &#x2013; 6th workshop on Data Structures in
             Bioinformatics, Rennes, France, February 4-5, 2020
-	      organizers: Lolita Lecompte (Univ. Rennes), Marie Le Roïc (Univ. Rennes), Téo Lemane (Univ. Rennes), Pierre Peterlongo (Univ. Rennes).
+	      organizers: Lolita Lecompte (Univ. Rennes), Marie Le Roïc (Univ. Rennes), Téo Lemane (Inria Rennes), Pierre Peterlongo (Inria Rennes).
 	    <li><a href="https://dsb2019.gitlab.io/">DSB 2019</a> &#x2013; 5th workshop on Data Structures in Bioinformatics, Dortmund, Ruhr Metropolitan Area, Germany, February 5-6, 2019
 	      organizers: Johannes Fischer (TU Dortmund), Johannes Köster (University of Duisburg-Essen), and Sven Rahmann (University of Duisburg-Essen).
 	    </li>
@@ -62,6 +62,8 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<h2 class="editable">Hosting institutions</h2>
 	<p class="editable">Reknown universities and scientific institutes have generously hosted DSB:
 	  <ul class="org-ul">
+	    <li><a href="https://www.inria.fr/en/centre-inria-rennes-bretagne-atlantique">Inria Rennes, France</a>
+	    </li>
 	    <li><a href="https://www.tu-dortmund.de/">Technical University of Dortmund</a>
 	    </li>
 	    <li><a href="https://www.helsinki.fi/en">University of Helsinki</a> and Helsinki Institute for Information Technology (HIIT)
@@ -87,6 +89,16 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<h2 class="editable">Sponsors</h2>
 	<p class="editable">Up to now, DSB has beneficiated from the support of scientific programs in which the organizers are or were involved in. If you want to support the organization of the next workshop, contact us.
 	  <ul class="org-ul">
+	    <li>Rennes1 University
+	    </li>
+	    <li>SFBI (Societe Français de Bioinformatique)
+	    </li>
+	    <li>IFB (Institut Français de Bioinformatique)
+	    </li>
+	    <li>CNRS (GdR IM and GdR BiM)
+	    </li>
+	    <li>IRISA Rennes
+	    </li>
 	    <li>Mercator Research Center Ruhr (MERCUR), grant Pe-2013-0012, UA Ruhr Professorship of Sven Rahmann
 	    </li>
 	    <li>Netherlands Organisation for Scientific Research (NWO), Veni grant "Fully reproducible workflows scaling from workstations to the cloud" to Johannes Köster
