updating for the 2022 conference in Dusseldorf, also updated DSB2021.md because for a new line inside a paragraph it is recommended to use two spaces instead of the slash and the slash was causing trouble

--- a/story.html
+++ b/story.html
@@ -27,10 +27,14 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<h2 class="editable">Early years (backwards)</h2>
 	<p class="editable">From Montpellier to Dortmund ...
 	  <ul>
-	    <li><a href="https://dsb-meeting.github.io/DSB2020/">DSB
-                2020</a> &#x2013; 6th workshop on Data Structures in
+	    <li><a href="https://dsb-meeting.github.io/DSB2021/">DSB 2021</a> &#x2013; 7th workshop on Data Structures in
+            Bioinformatics, Milano, Italy, February 11-12, 2021
+	      organizers: Paola Bonizzoni (Uni. Milano-Bicocca), Gianluca Della Vedova (Uni. Milano-Bicocca), Yuri Pirola Yuri Pirola, Raffaella Rizzi Raffaella Rizzi
+	    </li>
+	    <li><a href="https://dsb-meeting.github.io/DSB2020/">DSB 2020</a> &#x2013; 6th workshop on Data Structures in
             Bioinformatics, Rennes, France, February 4-5, 2020
 	      organizers: Lolita Lecompte (Univ. Rennes), Marie Le Roïc (Univ. Rennes), Téo Lemane (Inria Rennes), Pierre Peterlongo (Inria Rennes).
+	    </li>
 	    <li><a href="https://dsb2019.gitlab.io/">DSB 2019</a> &#x2013; 5th workshop on Data Structures in Bioinformatics, Dortmund, Ruhr Metropolitan Area, Germany, February 5-6, 2019
 	      organizers: Johannes Fischer (TU Dortmund), Johannes Köster (University of Duisburg-Essen), and Sven Rahmann (University of Duisburg-Essen).
 	    </li>
