more update for 2022, returned the old steering comittee and update contact us

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 			<div class="text">
 				<h2 class="editable">Contact</h2>
 				<p class="editable">
-				  For any questions, please do not hesitate to contact us!
+				  For any questions, please do not hesitate to contact <a href="mailto:daniel.doerr@hhu.de">Daniel Doerr</a>, or <a href="mailto:fawaz@hhu.de">Fawaz Dabbaghie</a>.
 				</p>
 			</div>
 <!-- 			<div class="contact-details">
