--- a/story.html
+++ b/story.html
@@ -25,7 +25,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
       </div>
       <div class="text">
 	<h2 class="editable">Early years (backwards)</h2>
-	<p class="editable">From Montpellier to Dortmund ...
+	<p class="editable">From Montpellier to Milano...
 	  <ul>
 	    <li><a href="https://dsb-meeting.github.io/DSB2021/">DSB 2021</a> &#x2013; 7th workshop on Data Structures in
             Bioinformatics, Milano, Italy, February 11-12, 2021
