--- a/steering.html
+++ b/steering.html
@@ -9,7 +9,7 @@ image: img/shore-stone-sun.jpg
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<h1 class="editable">Steering Committee</h1>
-			<p class="subtext editable">A group of people involved in the organization of DSB since the start, active in academy and industry, forms the steering committee. Their goal is to perpetuate DSB, ensuring that at least one edition takes place each year. For representation issues, each of them is working in a different European country.
+			<p class="subtext editable">A group of people involved in the organization of DSB since the start, active in academy and industry, forms the steering committee. Their goal is to perpetuate DSB, ensuring that at least one edition takes place each year. For representation issues, each of them is working in a different European country. Reach out to the Steering Committee at [dsb-steering@lists.tudelft.nl](mailto:dsb-steering@lists.tudelft.nl).
 			  </p>
 		</div>
 	</div>
