--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 			<div class="text">
 				<h2 class="editable">Contact</h2>
 				<p class="editable">
-				  For any questions, please do not hesitate to contact <a href="mailto:daniel.doerr@hhu.de">Daniel Doerr</a>, or <a href="mailto:fawaz@hhu.de">Fawaz Dabbaghie</a>.
+				  For any questions about DSB2023, please do not hesitate to <a href="mailto:dsb2023@lists.tudelft.nl">contact us</a>. For questions about DSB in general, reach out to the <a href="mailto:dsb-steering@lists.tudelft.nl">Steering Committee</a>. To stay up to date about DSB in the future, subscribe to the <a href="https://listserv.tudelft.nl/mailman/listinfo/dsb-info">DSB-info mailing list</a>.
 				</p>
 			</div>
 <!-- 			<div class="contact-details">
