--- a/story.html
+++ b/story.html
@@ -25,8 +25,12 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
       </div>
       <div class="text">
 	<h2 class="editable">Early years (backwards)</h2>
-	<p class="editable">From Montpellier to Milano...
+	<p class="editable">From Montpellier to Düsseldorf...
 	  <ul>
+	    <li><a href="https://dsb-meeting.github.io/DSB2022/">DSB 2022</a> &#x2013; 8th workshop on Data Structures in
+            Bioinformatics, Düsseldorf, Germany, June 13-14, 2022
+	      organizers: Fawaz Dabbaghie, Daniel Doerr, Sabine Gierling, Gunnar Klau, Tobias Marschall, Max Ried (Heinrich Heine Univ. Düsseldorf)
+	    </li>
 	    <li><a href="https://dsb-meeting.github.io/DSB2021/">DSB 2021</a> &#x2013; 7th workshop on Data Structures in
             Bioinformatics, Milano, Italy, February 11-12, 2021
 	      organizers: Paola Bonizzoni (Uni. Milano-Bicocca), Gianluca Della Vedova (Uni. Milano-Bicocca), Yuri Pirola Yuri Pirola, Raffaella Rizzi Raffaella Rizzi
@@ -42,7 +46,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	      organizers: Veli Mäkinen (Univ. Helsinki), Simon J. Puglisi (Univ. Helsinki)
 	    </li>
 	    <li><a href="https://dsb2017.github.io/">DSB 2017</a> &#x2013; 3rd workshop on Data Structures in Bioinformatics, Amsterdam, Nederlands, February 21-22, 2017
-	      organizers: Jasmijn Baajiens (CWI Amsterdam), Alexander Schönhut  (CWI Amsterdam)
+	      organizers: Jasmijn Baaijens (CWI Amsterdam), Johannes Köster (CWI Amsterdam), Alexander Schönhuth  (CWI Amsterdam)
 	    </li>
 	    <li><a href="https://didy.uni-bielefeld.de/DSB2015">DSB 2016</a> &#x2013; 2nd workshop on Data Structures in Bioinformatics, Bielefeld, Germany, February 23-24, 2016.
 	      organizers: Guillaume Holley (Bielefeld Univ.), Roland Wittler (Bielefeld Univ.), Jens Stoye (Bielefeld Univ.), Eric Rivals (CNRS Montpellier) 
