--- a/story.html
+++ b/story.html
@@ -24,7 +24,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<img class="editable" src="img/montpellier_arbre_blanc_detail.jpg" alt="Montpellier, Hérault, France, White Tree building (credit: Photo by Guillaume Bleyer on Unsplash)" />
       </div>
       <div class="text">
-	<h2 class="editable">Early years (backwards)</h2>
+	<h2 class="editable">Previous editions of DSB</h2>
 	<p class="editable">From Montpellier to Düsseldorf...
 	  <ul>
 	    <li><a href="https://dsb-meeting.github.io/DSB2022/">DSB 2022</a> &#x2013; 8th workshop on Data Structures in
@@ -70,13 +70,17 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<h2 class="editable">Hosting institutions</h2>
 	<p class="editable">Reknown universities and scientific institutes have generously hosted DSB:
 	  <ul class="org-ul">
+	    <li><a href="https://www.hhu.de/en/">Heinrich Heine University Düsseldorf, Germany</a>
+	    </li>
+	    <li><a href="https://www.unimib.it">University of Milano-Bicocca</a>
+	    </li>
 	    <li><a href="https://www.inria.fr/en/centre-inria-rennes-bretagne-atlantique">Inria Rennes, France</a>
 	    </li>
 	    <li><a href="https://www.tu-dortmund.de/">Technical University of Dortmund</a>
 	    </li>
 	    <li><a href="https://www.helsinki.fi/en">University of Helsinki</a> and Helsinki Institute for Information Technology (HIIT)
 	    </li>
-	    <li><a href="https://www.cwi.nl">Centrum Wiskunde &amp; Informatica</a> (CWI)  Amsterdam. CWI is the national research institute for mathematics and computer science in the Netherlands.
+	    <li><a href="https://www.cwi.nl">Centrum Wiskunde &amp; Informatica</a> (CWI) Amsterdam. CWI is the national research institute for mathematics and computer science in the Netherlands.
 	    </li>
 	    <li><a href="https://www.uni-bielefeld.de/">University of Bielefeld</a>
 	    </li>
