--- a/story.html
+++ b/story.html
@@ -25,8 +25,12 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
       </div>
       <div class="text">
 	<h2 class="editable">Previous editions of DSB</h2>
-	<p class="editable">From Montpellier to Düsseldorf...
+	<p class="editable">From Montpellier to Delt...
 	  <ul>
+	    <li><a href="https://dsb-meeting.github.io/DSB2023/">DSB 2023</a> &#x2013; 9th workshop on Data Structures in
+            Bioinformatics, Delft, Holland, March 21-22, 2023
+	      organizers: Thomas Abeel, Jasmijn Baaijens,  (Univ. Delft)
+	    </li>
 	    <li><a href="https://dsb-meeting.github.io/DSB2022/">DSB 2022</a> &#x2013; 8th workshop on Data Structures in
             Bioinformatics, Düsseldorf, Germany, June 13-14, 2022
 	      organizers: Fawaz Dabbaghie, Daniel Doerr, Sabine Gierling, Gunnar Klau, Tobias Marschall, Max Ried (Heinrich Heine Univ. Düsseldorf)
