--- a/story.html
+++ b/story.html
@@ -25,8 +25,16 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
       </div>
       <div class="text">
 	<h2 class="editable">Previous editions of DSB</h2>
-	<p class="editable">From Montpellier to Delt...
+	<p class="editable">
 	  <ul>
+		<!-- <li><a href="https://dsb-meeting.github.io/DSB2025/">DSB 2025</a> &#x2013; 11th workshop on Data Structures in
+            Bioinformatics, Pisa, Italy, March 5-6, 2025
+	      organizers:  (University of Pisa)
+	    </li> -->
+		<li><a href="https://dsb-meeting.github.io/DSB2024/">DSB 2024</a> &#x2013; 10th workshop on Data Structures in
+            Bioinformatics, Montpellier, France, March 14-15, 2024
+	      organizers: Jordan Moutet, Eric Rivals, Nikolai Romashchenko, Pengfei Wang (LIRMM - CNRS et Univ. Montpellier), Virginie Fêche, Elena Demchenko (LIRMM)
+	    </li>
 	    <li><a href="https://dsb-meeting.github.io/DSB2023/">DSB 2023</a> &#x2013; 9th workshop on Data Structures in
             Bioinformatics, Delft, Holland, March 21-22, 2023
 	      organizers: Thomas Abeel, Jasmijn Baaijens,  (Univ. Delft)
