--- a/story.html
+++ b/story.html
@@ -27,10 +27,10 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<h2 class="editable">Previous editions of DSB</h2>
 	<p class="editable">
 	  <ul>
-		<!-- <li><a href="https://dsb-meeting.github.io/DSB2025/">DSB 2025</a> &#x2013; 11th workshop on Data Structures in
+		<li><a href="https://dsb-meeting.github.io/DSB2025/">DSB 2025</a> &#x2013; 11th workshop on Data Structures in
             Bioinformatics, Pisa, Italy, March 5-6, 2025
-	      organizers:  (University of Pisa)
-	    </li> -->
+	      organizers: Nadia Pisanti, Giorgio Vinciguerra, Veronica Guerrini, Njagi Mwaniki, Giovanni Buzzega, Giovanna Rosone (University of Pisa)
+	    </li> 
 		<li><a href="https://dsb-meeting.github.io/DSB2024/">DSB 2024</a> &#x2013; 10th workshop on Data Structures in
             Bioinformatics, Montpellier, France, March 14-15, 2024
 	      organizers: Jordan Moutet, Eric Rivals, Nikolai Romashchenko, Pengfei Wang (LIRMM - CNRS et Univ. Montpellier), Virginie Fêche, Elena Demchenko (LIRMM)
